# django-pydantic-tutorial

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  type-and-test.sh
django_tutorial/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/client/: index.ts
frontend/src/client/models/: HiMomResponse.ts
frontend/src/client/services/: DefaultService.ts
polls/: urls.py  views.py
