[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["Brian Patzin <bpatzin2@gmail.com>"]
readme = "README.md"
packages = [{include = "django_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
psycopg2 = "^2.9.5"
django-ninja = "^0.19.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pyright = "^1.1.279"
black = "^22.10.0"
django-stubs = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"